Add an HttpHost Workflow Step (#530)
* Add an HttpHost Workflow Step

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Rebase, add TODOs

Signed-off-by: Daniel Widdis <widdis@gmail.com>

---------

Signed-off-by: Daniel Widdis <widdis@gmail.com>
(cherry picked from commit 3923f34ffde0962c0c25b375cbff5a9de05eab01)
Signed-off-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>